--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,5 +1,18 @@
-{{!-- The following component displays Ember's default welcome message. --}}
-{{welcome-page}}
-{{!-- Feel free to remove this! --}}
-
-{{outlet}}
+<div class="container">
+  <header class="page-header" id="blackops">
+    <center><h1><strong>Question and Answer Board</strong></h1></center>
+  </header>
+  <nav class="navbar navbar-default navbar-fixed-bottom">
+  <div class="container" id="blackops">
+    {{#link-to 'index'}}  <span class='navbar-brand'>Home</span> {{/link-to}}
+    <ul class='nav navbar-nav navbar collapse navbar-collapse'>
+      <li>
+        {{#link-to 'qa'}}Other
+        <span class='glyphicon glyphicon-pencil'></span>
+        {{/link-to}}
+      </li>
+    </ul>
+  </div>
+  </nav>
+    {{outlet}}
+</div>
