Still issues with adding answers.

--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,15 +1,22 @@
 <div class="container">
   {{add-question message=message sendPost="sendPost"}}
-{{#each model as |message|}}
+{{#each model.messages as |message|}}
   <div class="col-md-8">
-  <div class="panel panel-primary" id="roboto">
+  <div class="panel panel-primary boxes" id="roboto">
+    <div class="container">
     {{#link-to 'question' message.id}}
     <h1><strong>Question:</strong> {{message.question}}</h1>
     {{/link-to}}
     <p><strong>Author:</strong> {{message.author}}</p>
-
     {{edit-question message=message update="update"}}
+    {{new-review saveReview="saveReview" message=model}}
+    </div>
   </div>
+  <ul>
+    {{#each model.review as |review|}}
+      <li>{{review.author}} - {{review.content}} </li>
+    {{/each}}
+  </ul>
   </div>
 {{/each}}
 </div>
