--- a/app/templates/question.hbs
+++ b/app/templates/question.hbs
@@ -3,5 +3,6 @@
   <h1> Question: {{model.question}} </h1>
   <h2> Author: {{model.author}} </h2>
   <p> Notes: {{model.note}} </p>
+  {{new-review saveReview="saveReview" message=model}}
 </div>
 </div>
